--- a/styles.css
+++ b/styles.css
@@ -7,8 +7,8 @@ body {
 }
 
 .overlay {
-  width: 1920px;
-  height: 1080px;
+  width: 2560px;
+  height: 1440px;
   display: flex;
   flex-direction: column;
   align-items: space-between;
@@ -17,12 +17,14 @@ body {
 }
 
 .bottom {
-  width: 60%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  width: 100%;
   height: 150px;
   color: #243b53;
-  margin-left: 1350px;
   background-color: #d9e2ec;
-  border-top-left-radius: 30px;
   box-shadow: -3px -3px 10px rgba(0, 0, 0, 0.2);
 }
 
